--- a/app/src/main/res/layout/activity_blog.xml
+++ b/app/src/main/res/layout/activity_blog.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e6f3ff"
     tools:context=".Blog">
 
-   <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:orientation="vertical">
@@ -26,10 +27,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="74dp"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="82dp"
-        android:layout_marginEnd="62dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="17dp"
         android:background="#e6f3ff"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
